--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>yinkouya</title>
+</head>
+<body>
+<h1>Hello World</h1>
+<h2>I've noticed that my head tag is not working, need to check that out. -- should be wrapped by title tag!</h2>
+<h2>Working on the content and style.</h2>
+</body>
+</html>
