--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
     <title>yinkouya</title>
 </head>
 <body>
 <h1>Hello World</h1>
 <h2>I've noticed that my head tag is not working, need to check that out. -- should be wrapped by title tag!</h2>
 <h2>Working on the content and style.</h2>
+    
+<script type="text/javascript" src="angular.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
