--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <link rel="shortcut icon" href="static/main/images/01.PNG">
+    <link rel="shortcut icon" href="static/main/images/01.JPG">
     <title>yinkouya</title>
 </head>
 <body>
