--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/01.JPG">
-    <title>yinkouya</title>
+    <title>weiya</title>
 </head>
 <body>
+    <div class="mynavbar">
+      <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-inverse">
+          <nav class="nav">
+            <a class="nav-link active" href="#">Movie</a>
+            <a class="nav-link" href="#">Book</a>
+            <a class="nav-link" href="#">Song</a>
+            <a class="nav-link disabled" href="#">Me</a>
+          </nav>
+        </div>
+      </div>
+      <nav class="navbar navbar-inverse bg-inverse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
+    </div>
 <h1>Hello World</h1>
 <h2>I've noticed that my head tag is not working, need to check that out. -- should be wrapped by title tag!</h2>
 <h2>Working on the content and style.</h2>
