--- a/index.html
+++ b/index.html
@@ -6,27 +6,6 @@ title: Weiya
 <p>Latest Post</p>
 <ul>
   {% for post in site.posts %}
-　  <li>{{ post.date | date: "%A %B %-d, %Y" }}<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  <li>{{ post.date | date: "%A %B %-d, %Y" }}<p>&nbsp&nbsp&nbsp</p><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　{% endfor %}
 </ul>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/01.JPG">
-    <title>weiya</title>
-</head>
-<body>
-    
-   
-
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-</body>
-</html>
