--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ title: Weiya
 <p>Latest Post</p>
 <ul>
   {% for post in site.posts %}
-  <li>{{ post.date | date: "%A %B %-d, %Y" }}<p>&nbsp&nbsp&nbsp</p><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  <li>{{ post.date | date: "%A %B %-d, %Y" }}<a href="{{ site.baseurl }}{{ post.url }}">{{ &nbsp post.title }}</a></li>
 　{% endfor %}
 </ul>
