--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <nav class="nav flex-column">
-      <a class="nav-link active" href="#">Blog</a>
-      <a class="nav-link" href="#">About me</a>
+      <a class="nav-link active" href="https://yinkouya.github.io/">Blog</a>
+      <a class="nav-link" href="/about.html">About me</a>
       <a class="nav-link disabled" href="#">Moments</a>
     </nav>
     <p>Latest Post</p>
