--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="nav flex-column">
       <a class="nav-link active" href="https://yinkouya.github.io/">Blog</a>
-      <a class="nav-link" href="/about.html">About me</a>
+      <a class="nav-link" href="/README.md">About me</a>
       <a class="nav-link disabled" href="#">Moments</a>
     </nav>
     <p>Latest Post</p>
