--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>{{ page.title }}</title>
     <link rel="icon" type="image/x-icon" href="/images/01.JPG">
-    <link rel="stylesheet" href="{{ site.assets }}/css/style.css">
+    <link rel="stylesheet" href="{{ site.assets }}/style.css">
     
   </head>
   <body>
