--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     
-    <title>{{ page.title }}</title>
+    <title>
+      {% if page.title %} {{ page.title }} | {% endif %} Weiya
+    </title>
     <link rel="icon" type="image/x-icon" href="/images/01.JPG">
     <link rel="stylesheet" href="{{ site.assets }}/style.css">
     
