--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 ---
 layout: default
 ---
+
+<section role="banner">
+  <img src="/img/04.jpg" />
+</section>
+
+<section class="content">
+  <p>
+  Welcome to my blog. Please, don't laugh, it's a work in porgress.
+  </p>
+</section>
+
 <p>Latest Post</p>
 <ul>
   {% for post in site.posts %}
