--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ layout: default
     <p>Latest Post</p>
     <ul>
       {% for post in site.posts %}
-      <li>{{ post.date | date: "%A %B %-d, %Y" }}&nbsp;&nbsp;<a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a></li>
+      <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
+        {{ post.date | date: "%A %B %-d, %Y" }}
+      </li>
       {% endfor %}
     </ul>
   </div>
