--- a/index.html
+++ b/index.html
@@ -1,29 +1,63 @@
 ---
 layout: default
 ---
+<div class="container">
+  <section class="content">
+    <p>
+    Welcome to my blog. Please, don't laugh, it's a work in porgress.
+    </p>
+  </section>
 
-<div class="row">
-  <div class="col-sm-7">
-    <section role="banner">
-      <img src="img/yellow_dots.jpg" alt="yellow dots" height="320" width="512">
-    </section>
-    <section class="content">
-      <p>
-      Welcome to my blog. Please, don't laugh, it's a work in porgress.
-      </p>
-    </section>
-  </div>
-  <div class="col-sm-5">
-    <p>Latest Post</p>
-    <ul>
-      {% for post in site.posts %}
-      <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
-        {{ post.date | date: "%A %B %-d, %Y" }}
-      </li>
-      {% endfor %}
-    </ul>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img class="d-block img-fluid" src="img/yellow_blue_stripes.jpg" alt="First slide" height="320" width="512">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>This is a header3</h3>
+            <p>This is a paragraph</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block img-fluid" src="img/yellow_dots.jpg" alt="Second slide" height="320" width="512">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Hi This is a header3</h3>
+            <p>Hi This is a paragraph</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block img-fluid" src="img/yellow_wallpaper.jpg" alt="Third slide" height="320" width="512">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Hello This is a header3</h3>
+            <p>Hello This is a paragraph</p>
+          </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
+<div class="container">
+  <p>Latest Post</p>
+  <ul>
+    {% for post in site.posts %}
+    <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
+      {{ post.date | date: "%A %B %-d, %Y" }}
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+
 
 
 
