--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@ layout: default
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="img/yellow01.png" alt="First slide" height="320" width="512">
+        <img class="d-block img-fluid" src="img/yellow01.png" alt="First slide" onload="DrawImage(this)">
           <div class="carousel-caption d-none d-md-block">
             <h3>This is a header3</h3>
             <p>This is a paragraph</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="img/yellow02.png" alt="Second slide" height="320" width="512">
+        <img class="d-block img-fluid" src="img/yellow02.png" alt="Second slide" onload="DrawImage(this)">
           <div class="carousel-caption d-none d-md-block">
             <h3>Hi This is a header3</h3>
             <p>Hi This is a paragraph</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="img/yellow03.png" alt="Third slide" height="320" width="512">
+        <img class="d-block img-fluid" src="img/yellow03.png" alt="Third slide" onload="DrawImage(this)">
           <div class="carousel-caption d-none d-md-block">
             <h3>Hello This is a header3</h3>
             <p>Hello This is a paragraph</p>
