--- a/index.html
+++ b/index.html
@@ -10,39 +10,38 @@ layout: default
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide" onload="DrawImage(this)">
+        <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>This is a header3</h3>
-            <p>This is a paragraph</p>
+            <h3>This is a yellow pillow</h3>
+            <p>Right now I adore yellow, this pillow saves me</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="img/yellowpillow02.jpg" alt="Second slide" onload="DrawImage(this)">
+        <img class="d-block img-fluid" src="img/yellowpillow02.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Hi This is a header3</h3>
-            <p>Hi This is a paragraph</p>
+            <h3>This is Isabelle Huppert</h3>
+            <p>I came to know her in 2016, I saw 5 of her films, and I loved every one.</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Third slide" onload="DrawImage(this)">
+        <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Hello This is a header3</h3>
-            <p>Hello This is a paragraph</p>
+            <h3>This is a cat3</h3>
+            <p>You won't see this very often, but this is a cute picture</p>
           </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
 </div>
 <div class="container">
-  <p>Latest Post</p>
   <ul>
     {% for post in site.posts %}
     <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
