--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
     </a>
   </div>
 </div>
-<div class="container">
+<div class="container post">
   <ul>
     {% for post in site.posts %}
     <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
