--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
       <div class="carousel-item">
         <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>This is a cat3</h3>
+            <h3>This is a cat</h3>
             <p>You won't see this very often, but this is a cute picture</p>
           </div>
       </div>
