--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ layout: default
 <div class="container post">
   <ul>
     {% for post in site.posts %}
-    <li><a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a>
-      {{ post.date | date: "%A %B %-d, %Y" }}
+    <li>{{ post.date | date: "%A %B %-d, %Y" }}
+      <a href="{{ site.baseurl }}{{ post.url }}" style="float:right">{{ post.title }}</a> 
     </li>
     {% endfor %}
   </ul>
