--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
-    <div class="carousel">
+    <div class="slickcarousel">
         <div>
             <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide">
         </div>
