--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: default
 ---
 <div class="demo">
-    <div>
+    <div class="tocarousel">
         <img src="img/yellowpillow01.jpg" alt="First slide">
     </div>
-    <div>
+    <div class="tocarousel">
         <img src="img/yellowpillow02.jpg" alt="Second slide">
     </div>
-    <div>
+    <div class="tocarousel">
         <img src="img/yellowpillow03.jpg" alt="Third slide">
     </div>
-    <div>
+    <div class="tocarousel">
         <img src="img/yellow_dots.jpg" alt="Fourth slide">
     </div>
 </div>
