--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 <div class="demo">
     <div class="tocarousel">
         <img src="img/yellowpillow01.jpg" alt="First slide">
+        <p> Can I add a caption here? </p>
     </div>
     <div class="tocarousel">
         <img src="img/yellowpillow02.jpg" alt="Second slide">
