--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: default
     </div> 
     <div class="tocarousel">
         <img src="img/huppert01.jpg" alt="Fourth slide">
+        <p> Where would this caption go? </p>
     </div>
 </div>
 <div class="container post">
