--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@ layout: default
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Second slide">
+      <img class="d-block img-fluid" src="img/yellow-sateen.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-        <h3>Cats</h3>
-        <p>I don't know about cats</p>
+        <h3>Silk</h3>
+        <p>Like a queen</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="Fourth slide">
+      <img class="d-block img-fluid" src="img/yellow-wallpaper.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-        <h3>Yellow Pillows</h3>
-        <p>Soft, warm, somewhere deep in my heart</p>
+        <h3>Hope</h3>
+        <p>I don't know what it means, it delights me</p>
       </div>
     </div>
   </div>
