--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@ layout: default
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="img/huppert01.jpg" alt="First slide">
+      <img class="d-block img-fluid" src="img/Things-to-come-1170x400.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
         <h3>Isabelle Huppert</h3>
         <p>My favourate actress so far, my inspration of 2017</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="img/yellow-sateen.jpg" alt="Second slide">
+      <img class="d-block img-fluid" src="img/Yellow-pepper-1170x600.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-        <h3>Silk</h3>
-        <p>Like a queen</p>
+        <h3>Lovely</h3>
+        <p>I see something alife</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="img/yellow-wallpaper.jpg" alt="Third slide">
+      <img class="d-block img-fluid" src="img/Yellow-wallpaper-1170x600.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h3>Hope</h3>
         <p>I don't know what it means, it delights me</p>
