--- a/about.html
+++ b/about.html
@@ -1,7 +1,15 @@
 ---
 layout: default
 ---
-<h3>Weiya Yin is a boring person</h3>
-<p>I'm a Web Design amateur, I write stuff here to record my life, which is quite ordinary.
-Contact me if you like my pic.
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Weiya Yin is a boring person</h3>
+      <p>I'm a Web Design amateur, I write stuff here to record my life, which is quite ordinary.
+      Contact me if you like my pic.</p>
+    </div>
+    <div class="col">
+      <img src="img/yellow-sateen.jpg alt="cloth">
+    </div>
+  </div>
+</div>
