--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ layout: default
       Contact me if you like my pic.</p>
     </div>
     <div class="col">
-      <img src="img/yellow-sateen.jpg alt="cloth">
+      <img src="img/yellow-sateen.jpg" alt="cloth">
     </div>
   </div>
 </div>
