--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@ layout: default
 ---
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-5">
       <h3>Weiya Yin is a boring person</h3>
       <p>I'm a Web Design amateur, I write stuff here to record my life, which is quite ordinary.
       Contact me if you like my pic.</p>
     </div>
-    <div class="col">
+    <div class="col-7">
       <img src="img/yellow-sateen.jpg" alt="cloth">
     </div>
   </div>
