--- a/about.html
+++ b/about.html
@@ -3,12 +3,15 @@ layout: default
 ---
 <div class="container">
   <div class="row">
-    <div class="col-5">
-      <h3>Weiya Yin is a boring person</h3>
-      <p>I'm a Web Design amateur, I write stuff here to record my life, which is quite ordinary.
-      Contact me if you like my pic.</p>
+    <div class="col-6">
+      <h3>What a website!</h3>
+      <p>I'm a Web Design amateur, I write stuff here to record my life.</p>
+      <p>I need to listen to music when brushing my teeth and taking a shower.</p>
+      <p>Philosophy is fascinating, I have so many questions about life.</p>
+      <p>At times I struggle with my anxieties and insecurites.</p>
+      <p>Only by working continuously.</p>
     </div>
-    <div class="col-7">
+    <div class="col-6">
       <img class="about" src="img/yellow-sateen.jpg" alt="cloth">
     </div>
   </div>
