--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ layout: default
       <p>I need to listen to music when brushing my teeth and taking a shower.</p>
       <p>Philosophy is fascinating, I have so many questions about life.</p>
       <p>At times I struggle with my anxieties and insecurites.</p>
-      <p>Only by working continuously.</p>
+      <p><i>Only by working continuously.</i></p>
     </div>
     <div class="col-6">
       <img class="about" src="img/yellow-sateen.jpg" alt="cloth">
