--- a/aboutme.html
+++ b/aboutme.html
@@ -4,15 +4,15 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <h3>What a website!</h3>
-      <p>I'm a Web Design amateur, I write stuff here to record my life.</p>
-      <p>I need to listen to music when brushing my teeth and taking a shower.</p>
+      <h3>Work in progress</h3>
+      <p>I'm a wanner-be web designer amateur, I write stuff here to record my life.</p>
+      <p>I spend over 5 minute when brushing teeth -- my 4 wisdom teeth (2 pulled out) are not fun.</p>
       <p>Philosophy is fascinating, I have so many questions about life.</p>
       <p>At times I struggle with my anxieties and insecurites.</p>
       <p><i>Only by working continuously.</i></p>
     </div>
     <div class="col-6">
-      <img class="about" src="img/yellow-sateen.jpg" alt="cloth">
+      <img class="about" src="img/yellow-sateen.jpg" alt="yellow">
     </div>
   </div>
 </div>
