--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="main">
   <div class="row">
     <div class="col-6">
       <h3>Work in progress</h3>
