--- a/code.html
+++ b/code.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<div style="height: 100px; background-color: rgba(255,0,0,0.1);">
 <div class="card w-20 h-50 d-inline-block">
   <img class="card-img-top" src="..." alt="Card image cap">
   <div class="card-block">
@@ -40,4 +41,4 @@ layout: default
     <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
   </div>
 </div>
-
+</div>
