--- a/code.html
+++ b/code.html
@@ -2,43 +2,43 @@
 layout: default
 ---
 
-<div style="height: 300px; background-color: rgba(255,0,0,0.1);">
-<div class="card w-20 h-50 d-inline-block">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-    <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
+<div style="height: 400px; width： 800px; background-color: rgba(255,0,0,0.1);">
+  <div class="card w-20 h-40 d-inline-block">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+      <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
+    </div>
   </div>
-</div>
 
-<div class="card w-50 h-100 d-inline-block">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-    <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
+  <div class="card w-40 h-100 d-inline-block">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+      <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
+    </div>
   </div>
-</div>
 
-<div class="card w-20 h-50 d-inline-block">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-    <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
+  <div class="card w-20 h-40 d-inline-block">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+      <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
+    </div>
   </div>
-</div>
-<div class="card w-20 h-50 d-inline-block">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-    <h4 class="card-title">HTML和CSS入门-Udacity-左下</h4>
+  <div class="card w-20 h-40 d-inline-block">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+      <h4 class="card-title">HTML和CSS入门-Udacity-左下</h4>
+    </div>
   </div>
-</div>
 
-<div class="card w-20 h-50 d-inline-block">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-    <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
+  <div class="card w-20 h-40 d-inline-block">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+      <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
+    </div>
   </div>
-</div>
 </div>
