--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div style="height: 400px; width： 800px; background-color: rgba(255,0,0,0.1);">
+<div class="card-columns" style="height: 400px; width： 800px; background-color: rgba(255,0,0,0.1);">
   <div class="card w-20 h-40 d-inline-block">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
