--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="card-columns" style="background-color: rgba(255,0,0,0.1);">
+<div style="background-color: rgba(255,0,0,0.1);">
   <div class="card w-25 h-50 d-inline-block">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
