--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@ layout: default
     </div>
   </div>
   
-  <div class="card w-25 h-50 d-inline-block">
+  <div class="card w-25 h-50">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
       <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
@@ -35,7 +35,7 @@ layout: default
     </div>
   </div>
 
-  <div class="card w-25 h-50 d-inline-block">
+  <div class="card w-25 h-50">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
       <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
