--- a/code.html
+++ b/code.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div style="background-color: rgba(255,0,0,0.1);">
-  <div class="card w-25 h-50 d-inline-block">
+  <div class="card w-25 h-50">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
       <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
