--- a/code.html
+++ b/code.html
@@ -3,43 +3,49 @@ layout: default
 ---
 
 <div style="background-color: rgba(255,0,0,0.1);">
-  <div class="card w-25 h-50">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-      <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
+  <div class="row">
+  <div class="col-sm-3">
+    <div class="card w-25 h-50">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+        <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
+      </div>
     </div>
-  </div>
-  
-  <div class="card w-25 h-50">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-      <h4 class="card-title">HTML和CSS入门-Udacity-左下</h4>
-    </div>
-  </div>
-
-  <div class="card w-50 h-100 d-inline-block">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-      <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
+    <div class="card w-25 h-50">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+        <h4 class="card-title">HTML和CSS入门-Udacity-左下</h4>
+      </div>
     </div>
   </div>
 
-  <div class="card w-25 h-50 d-inline-block">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-      <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
+  <div class="col-sm-6">
+    <div class="card w-50 h-100">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+        <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
+      </div>
     </div>
   </div>
 
-  <div class="card w-25 h-50">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-      <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
+  <div class="col-sm-3">
+    <div class="card w-25 h-50">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+        <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
+      </div>
+    </div>
+    <div class="card w-25 h-50">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
+        <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
+      </div>
     </div>
   </div>
+</div>
 </div>
