--- a/code.html
+++ b/code.html
@@ -5,14 +5,14 @@ layout: default
 <div style="background-color: rgba(255,0,0,0.1);">
   <div class="row">
   <div class="col-sm-3">
-    <div class="card w-25 h-50">
+    <div class="card h-50">
       <img class="card-img-top" src="..." alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
       </div>
     </div>
-    <div class="card w-25 h-50">
+    <div class="card h-50">
       <img class="card-img-top" src="..." alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
@@ -22,7 +22,7 @@ layout: default
   </div>
 
   <div class="col-sm-6">
-    <div class="card w-50 h-100">
+    <div class="card h-100">
       <img class="card-img-top" src="..." alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
@@ -32,14 +32,14 @@ layout: default
   </div>
 
   <div class="col-sm-3">
-    <div class="card w-25 h-50">
+    <div class="card h-50">
       <img class="card-img-top" src="..." alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
       </div>
     </div>
-    <div class="card w-25 h-50">
+    <div class="card h-50">
       <img class="card-img-top" src="..." alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
