--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@ layout: default
 <div class="main">
   <div class="list-group">
     {% if site.posts %}
-      {% for post in site.categories[code] %}
+      {% for post in site.categories["code"] %}
         <a href="{{ post.url | prepend: site.baseurl }}" class="list-group-item list-group-item-action flex-column align-items-start active">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ post.title }}</h5>
