--- a/life.html
+++ b/life.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div class="wrapper">
 <div class="row">
   <div class="col-sm-3">
     <div class="card h-50">
@@ -46,4 +46,17 @@ layout: default
       </div>
     </div>
   </div>
+</div>
+
+{% if site.posts %}
+  <div class='container'>
+    <h3 class='bottom-space-1'>沉迷学习:</h3>
+    {% for post in site.categories["life"] %}
+    <a class='post-index-item' href="{{ post.url | prepend: site.baseurl }}">
+      <span class='date'>{{ post.date | date_to_string }}</span>
+      <span class='article'>{{ post.title }}</span>
+    </a>
+    {% endfor %}
+  </div>
+{% endif %}
 </div>
