--- a/about.html
+++ b/about.html
@@ -2,17 +2,11 @@
 layout: default
 ---
 <div class="main">
-  <div class="row">
-    <div class="col-6">
-      <h3>Work in progress</h3>
-      <p>I'm a wanna-be web designer, I write stuff here to record my life.</p>
-      <p>I spend over 5 minute when brushing teeth -- My 4 wisdom teeth (2 pulled out) are no fun.</p>
-      <p>Philosophy is fascinating, I have so many questions about life.</p>
-      <p>At times I struggle with my anxieties and insecurites.</p>
-      <p><i>Only by working continuously.</i></p>
-    </div>
-    <div class="col-6">
-      <img class="about" src="/img/yellow-sateen.jpg" alt="yellow">
-    </div>
-  </div>
+  <img class="about rounded-circle" src="/img/yellow-sateen.jpg" alt="yellow">
+  <h4>Kouyaa</h4>
+  <p>I'm a web designer wannabe, I write details of my life here.
+  <br>Coding is fascinating because it creates new things, like this blog.
+  <br>Movies and books and reality shows are my ways to live others' lives. Mine is okay.
+  <br>Eat(less...), pray(wow, working on it), love(others and myself).
+  <br><i>Only by working continuously.</i></p>
 </div>
