--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="main">
+<div class="main-about">
   <img class="about rounded-circle" src="/img/yellow-sateen.jpg" alt="yellow">
   <h4>Kouyaa</h4>
   <p>I'm a web designer wannabe, I write details of my life here.
