--- a/life.html
+++ b/life.html
@@ -5,14 +5,14 @@ layout: default
 <div class="row">
   <div class="col-sm-3">
     <div class="card h-50">
-      <img class="card-img-top" src="http://via.placeholder.com/240x150" alt="Card image cap">
+      <img class="card-img-top" src="img/topleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
       </div>
     </div>
     <div class="card h-50">
-      <img class="card-img-top" src="http://via.placeholder.com/240x150" alt="Card image cap">
+      <img class="card-img-top" src="img/bottomleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-左下</h4>
@@ -22,7 +22,7 @@ layout: default
 
   <div class="col-sm-6">
     <div class="card h-100">
-      <img class="card-img-top" src="http://via.placeholder.com/480x300" alt="Card image cap">
+      <img class="card-img-bottom" src="img/middle.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
@@ -32,14 +32,14 @@ layout: default
 
   <div class="col-sm-3">
     <div class="card h-50">
-      <img class="card-img-top" src="http://via.placeholder.com/240x150" alt="Card image cap">
+      <img class="card-img-top" src="img/topright.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
       </div>
     </div>
     <div class="card h-50">
-      <img class="card-img-top" src="http://via.placeholder.com/240x150" alt="Card image cap">
+      <img class="card-img-top" src="img/bottomright.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
         <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
