--- a/life.html
+++ b/life.html
@@ -52,7 +52,7 @@ layout: default
   <div class='container'>
     <h4>As time goes by</h4>
     {% for post in site.categories["life"] %}
-    <a class='post-index-item' href="{{ post.url | prepend: site.baseurl }}">
+    <a class='life-item' href="{{ post.url | prepend: site.baseurl }}">
       <span class='date'>{{ post.date | date_to_string }}</span>
       <span class='article'>{{ post.title }}</span>
     </a>
