--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="main-about">
-  <img class="about rounded-circle" src="/img/yellow-sateen.jpg" alt="yellow">
+  <img class="about rounded-circle" src="/img/about.jpg" alt="yellow">
   <h4>Kouyaa</h4>
   <p>I'm a web designer wannabe, I write details of my life here.
   <br>Coding is fascinating because it creates new things, like this blog.
