--- a/about.html
+++ b/about.html
@@ -2,11 +2,17 @@
 layout: default
 ---
 <div class="main-about">
-  <img class="about rounded-circle" src="/img/about.jpg" alt="yellow">
-  <h4>Kouyaa</h4>
-  <p>I'm a web designer wannabe, I write details of my life here.
-  <br>Coding is fascinating because it creates new things, like this blog.
-  <br>Movies and books and reality shows are my ways to live others' lives. Mine is okay.
-  <br>Eat(less...), pray(wow, working on it), love(others and myself).
-  <br><i>Only by working continuously.</i></p>
+  <div class="row">
+    <div class="col-md-6">
+      <img class="about rounded-circle" src="/img/about.jpg" alt="yellow">
+    </div>
+    <div class="col-md-6">
+      <h4>Kouyaa</h4>
+      <p>I'm a web designer wannabe, I write details of my life here.
+      <br>Coding is fascinating because it creates new things, like this blog.
+      <br>Movies and books and reality shows are my ways to live others' lives. Mine is okay.
+      <br>Eat(less...), pray(wow, working on it), love(others and myself).
+      <br><i>Only by working continuously.</i></p>
+    </div>
+  </div>
 </div>
