--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 <div class="main-about">
   <div class="row">
     <div class="col-md-6">
-      <img class="about rounded-circle" src="/img/about.jpg" alt="yellow">
+      <img class="about" src="/img/about.jpg" alt="yellow">
     </div>
     <div class="col-md-6">
       <h4>Kouyaa</h4>
