--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="main-about">
-  <div class="row">
+  <div class="row row-about">
     <div class="col-md-6">
       <img class="about" src="/img/about.jpg" alt="yellow">
     </div>
