--- a/life.html
+++ b/life.html
@@ -8,7 +8,7 @@ layout: default
       <img class="card-img-top img-fluid" src="img/topleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-        <h4 class="card-title">HTML和CSS入门-Udacity-左上</h4>
+        <a href="{{ site.baseurl }}life/The-Mid-July-Weekend.html"><h4 class="card-title">The Mid July Weekend</h4></a>
       </div>
     </div>
     <div class="card h-50">
