--- a/life.html
+++ b/life.html
@@ -8,14 +8,14 @@ layout: default
       <img class="card-img-top img-fluid" src="img/topleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 17, 2017</small></p>
-        <a href="{{ site.baseurl }}life/The-Mid-July-Weekend.html"><h4 class="card-title">The Mid July Weekend</h4></a>
+        <a href="{{ site.baseurl }}/life/The-Mid-July-Weekend.html"><h4 class="card-title">The Mid July Weekend</h4></a>
       </div>
     </div>
     <div class="card h-50">
       <img class="card-img-top img-fluid" src="img/bottomleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 5, 2017</small></p>
-        <a href="{{ site.baseurl }}life/周轶君.html"<h4 class="card-title">周轶君</h4></a>
+        <a href="{{ site.baseurl }}/life/周轶君.html"<h4 class="card-title">周轶君</h4></a>
       </div>
     </div>
   </div>
@@ -24,7 +24,7 @@ layout: default
     <div class="card h-100">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-        <h4 class="card-title">HTML和CSS入门-Udacity-中</h4>
+        <a href="{{ site.baseurl }}/life/A-Heat-Stroke.html<h4 class="card-title">A Heat Stroke</h4></a>
       </div>
       <img class="card-img-bottom img-fluid" src="img/middle.jpg" alt="Card image cap">
     </div>
