--- a/life.html
+++ b/life.html
@@ -15,7 +15,7 @@ layout: default
       <img class="card-img-top img-fluid" src="img/bottomleft.jpg" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 5, 2017</small></p>
-        <a href="{{ site.baseurl }}/life/周轶君.html"<h4 class="card-title">周轶君</h4></a>
+        <a href="{{ site.baseurl }}/life/周轶君.html"><h4 class="card-title">周轶君</h4></a>
       </div>
     </div>
   </div>
@@ -23,8 +23,8 @@ layout: default
   <div class="col-sm-6">
     <div class="card h-100">
       <div class="card-block">
-        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-        <a href="{{ site.baseurl }}/life/A-Heat-Stroke.html<h4 class="card-title">A Heat Stroke</h4></a>
+        <p class="card-text"><small class="text-muted">June 22, 2017</small></p>
+        <a href="{{ site.baseurl }}/life/A-Heat-Stroke.html"><h4 class="card-title">A Heat Stroke</h4></a>
       </div>
       <img class="card-img-bottom img-fluid" src="img/middle.jpg" alt="Card image cap">
     </div>
@@ -34,22 +34,20 @@ layout: default
     <div class="card h-50">
       <img class="card-img-top img-fluid" src="img/topright.jpg" alt="Card image cap">
       <div class="card-block">
-        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-        <h4 class="card-title">HTML和CSS入门-Udacity-右上</h4>
+        <p class="card-text"><small class="text-muted">July 06, 2017</small></p>
+        <a href="{{ site.baseurl }}/life/The-Seasons-in-Quincy.html"><h4 class="card-title">The Seasons in Quincy -- Four Portraits of John Berger</h4></a>
       </div>
     </div>
     <div class="card h-50">
       <img class="card-img-top img-fluid" src="img/bottomright.jpg" alt="Card image cap">
       <div class="card-block">
-        <p class="card-text"><small class="text-muted">June 29, 2017</small></p>
-        <h4 class="card-title">HTML和CSS入门-Udacity-右下</h4>
+        <p class="card-text"><small class="text-muted">June 04, 2017</small></p>
+        <a href="{{ site.baseurl }}/life/Madame-Bovary.html"><h4 class="card-title">Madame Bovary</h4></a>
       </div>
     </div>
   </div>
 </div>
 
-
-<!--
 {% if site.posts %}
   <div class='container'>
     <h4>As time goes by</h4>
@@ -62,5 +60,3 @@ layout: default
   </div>
 {% endif %}
 </div>
-*/
--->
