--- a/code.html
+++ b/code.html
@@ -1,17 +1,10 @@
 ---
 layout: default
 ---
-<div class="main">
-  <div class="list-group w-75">
-    {% if site.posts %}
-      {% for post in site.categories["code"] %}
-        <a href="{{ post.url | prepend: site.baseurl }}" class="list-group-item list-group-item-action flex-column align-items-start">
-          <div class="d-flex w-75 justify-content-between">
-            <h5 class="mb-1">{{ post.title }}</h5>
-            <small>{{ post.date | date_to_string }}</small>
-          </div>
-        </a>
-      {% endfor %}
-    {% endif %}
-  </div>
+<div class="container">
+  <ul class="posts">
+  {% for post in site.categories["code"] %}
+  <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+  {% endfor %}
+  </ul>
 </div>
