--- a/life.html
+++ b/life.html
@@ -32,7 +32,7 @@ layout: default
 
   <div class="col-sm-3">
     <div class="card h-50">
-      <img class="card-img-top img-fluid" src="img/topright.jpg" alt="Card image cap">
+      <img class="card-img-top img-fluid" src="http://via.placeholder.com/200x200" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 22, 2017</small></p>
         <a href="{{ site.baseurl }}/life/A-Heat-Stroke.html"><h4 class="card-title">A Heat Stroke</h4></a>
