--- a/life.html
+++ b/life.html
@@ -1,17 +1,16 @@
 ---
 layout: default
 ---
-<div class="wrapper">
 <div class="row">
   <div class="col-sm-3">
-    <div class="card h-50">
+    <div class="card">
       <img class="card-img-top img-fluid" src="http://via.placeholder.com/250x250" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 17, 2017</small></p>
         <a href="{{ site.baseurl }}/life/The-Mid-July-Weekend.html"><h4 class="card-title">The Mid July Weekend</h4></a>
       </div>
     </div>
-    <div class="card h-50">
+    <div class="card">
       <img class="card-img-top img-fluid" src="http://via.placeholder.com/250x250" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 5, 2017</small></p>
@@ -21,24 +20,24 @@ layout: default
   </div>
 
   <div class="col-sm-6">
-    <div class="card h-100">
+    <div class="card">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">July 06, 2017</small></p>
         <a href="{{ site.baseurl }}/life/The-Seasons-in-Quincy.html"><h4 class="card-title">The Seasons in Quincy -- Four Portraits of John Berger</h4></a>
       </div>
-      <img class="card-img-bottom img-fluid" src="http://via.placeholder.com/350x350" alt="Card image cap">
+      <img class="card-img-bottom img-fluid" src="http://via.placeholder.com/300x300" alt="Card image cap">
     </div>
   </div>
 
   <div class="col-sm-3">
-    <div class="card h-50">
+    <div class="card">
       <img class="card-img-top img-fluid" src="http://via.placeholder.com/250x250" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 22, 2017</small></p>
         <a href="{{ site.baseurl }}/life/A-Heat-Stroke.html"><h4 class="card-title">A Heat Stroke</h4></a>
       </div>
     </div>
-    <div class="card h-50">
+    <div class="card">
       <img class="card-img-top img-fluid" src="http://via.placeholder.com/250x250" alt="Card image cap">
       <div class="card-block">
         <p class="card-text"><small class="text-muted">June 04, 2017</small></p>
@@ -55,4 +54,4 @@ layout: default
   {% endfor %}
   </ul>
 </div>
-</div>
+
