--- a/life.html
+++ b/life.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="row">
+<div class="row container">
   <div class="col-sm-3">
     <div class="card">
       <img class="card-img-top img-fluid" src="http://via.placeholder.com/250x250" alt="Card image cap">
