--- a/about.html
+++ b/about.html
@@ -1,12 +1,11 @@
 ---
 layout: default
 ---
-<div class="main-about">
-  <img class="about rounded mx-auto d-block" src="/img/about.jpg" alt="yellow">
+<div class="container about">
+  <img class="about rounded mx-auto d-block" src="/img/about.jpg" alt="about">
   <h4>Kouyaa</h4>
-  <p>I'm a web designer wannabe, I write details of my life here.
+  <p>I'm a wannabe front-end developer, I write details of my life here.
   <br>Coding is fascinating because it creates new things, like this blog.
   <br>Movies and books and reality shows are my ways to live others' lives. Mine is okay.
-  <br>Eat(less...), pray(wow, working on it), love(others and myself).
   <br><i>Only by working continuously.</i></p>
 </div>
