--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container about">
-  <img class="about rounded mx-auto d-block" src="/img/about.jpg" alt="about">
+  <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
   <h4>Kouyaa</h4>
   <p>I'm a wannabe front-end developer, I write details of my life here.
   <br>Coding is fascinating because it creates new things, like this blog.
