--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ layout: default
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="{{ site.url }}/img/Yellow-wallpaper-1170x600.jpg" alt="Third slide">
+        <img class="d-block img-fluid" src="{{ site.url }}/img/YuXiuhuang.jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Hope</h3>
-          <p>I don't know what it means, it delights me</p>
+          <h3>摇摇晃晃的人间</h3>
+          <p>A physically disabled women from rural area looking for love</p>
         </div>
       </div>
     </div>
