--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="{{ site.url }}/img/Things-to-come-1170x400.jpg" alt="First slide">
+        <img class="d-block img-fluid" src="{{ site.url }}/img/Things-to-come-1170x600.jpg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
           <h3>Isabelle Huppert</h3>
           <p>My favourate actress so far, my inspration of 2017</p>
@@ -24,7 +24,7 @@ layout: default
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="{{ site.url }}/img/YuXiuhuang.jpg" alt="Third slide">
+        <img class="d-block img-fluid" src="{{ site.url }}/img/YuXiuhuang-1170x600.jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
           <h3>摇摇晃晃的人间</h3>
           <p>A physically disabled women from rural area looking for love</p>
