--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ layout: default
       <div class="carousel-item">
         <img class="d-block img-fluid" src="{{ site.url }}/img/YuXiuhuang-1170x600.jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3>摇摇晃晃的人间</h3>
-          <p>A physically disabled women from rural area looking for love</p>
+          <h3>Still Tomorrow</h3>
+          <p>Is it true that there is still tomorrow, what a pity there is still tomorrow</p>
         </div>
       </div>
     </div>
