--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@ layout: default
 <div class="container about">
   <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
   <h4>Kouyaa</h4>
-  <p>I'm a wannabe front-end developer, I write details of my life here.
-  <br>Coding is fascinating because it creates new things, like this blog.
-  <br>Movies and books and reality shows are my ways to live others' lives. Mine is okay.
-  <br><i>Only by working continuously.</i></p>
+  <p>I'm a wannabe front-end developer, I experiment web features here.</p>
+  <p>This blog is basically my cloud notes.</p>
+  <p>Self-introduction is a struggle.</p>
+  <p><br><i>Only by working continuously.</i></p>
 </div>
