--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ layout: default
   <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
   <h4>Kouyaa</h4>
   <p>I'm a wannabe front-end developer, I experiment web features here.</p>
-  <p>This blog is basically my cloud notes.</p>
-  <p>Self-introduction is a struggle.</p>
-  <p><br><i>Only by working continuously.</i></p>
+  <br />This blog is basically my cloud notes.
+  <br />Ah,self-introduction is a struggle.
+  <br /><i>Only by working continuously.</i></p>
 </div>
