--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@ layout: default
 <div class="container about">
   <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
   <h4>Kouyaa</h4>
-  <p>I'm a wannabe front-end developer, I experiment web features here.</p>
+  <p>I'm a wannabe front-end developer, I experiment web features here.
   <br />This blog is basically my cloud notes.
-  <br />Ah,self-introduction is a struggle.
-  <br /><i>Only by working continuously.</i></p>
+  <br />Ah,self-introduction is a struggle.</p>
+  <p><i>Only by working continuously.</i></p>
 </div>
