--- a/anotherlife.html
+++ b/anotherlife.html
@@ -9,7 +9,7 @@ layout: default
 				<div class="category_container">
 					<div class="inner">
 						<div class="category_title catstyle-style4">
-							<h2><a href="" title="Films | Weekends">Films | Weekends</a></h2>
+							<h2><a href="" title="Weekends | Films">weekends | Films</a></h2>
 						</div>
 <div class="small-12 medium-3 columns">
   <article itemscope="" itemtype="http://schema.org/Article" class="post style5 post-58915 type-post status-publish format-standard has-post-thumbnail hentry category-filmfestival category-interviews tag-9369 tag-firstfilmfestival2017 tag-old-beast-2017 tag-9521" id="post-58915" role="article">
