--- a/anotherlife.html
+++ b/anotherlife.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
 	<aside class="gap cf" style="height:30px;"></aside>
-	<div class="category_title">
+	<div class="text-center">
 		<h2><a href="" title="Weekends | Films">Weekends | Films</a></h2>
 	</div>
 	<div class="row">
