--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="container code-container">
   <ul class="posts">
   {% for post in site.categories["code"] %}
   <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
