--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container code-container">
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-md-5 col-sm-12">
       <img src="/img/code.jpg" alt="code">
     </div>
