--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ layout: default
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="{{ site.url }}/img/Yellow-pepper-1170x600.jpg" alt="Second slide">
+        <img class="d-block img-fluid" src="{{ site.url }}/img/dawn-1170x600.jpg" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Lovely</h3>
-          <p>I see something alife</p>
+          <h3>Sun is hiding at dawn</h3>
+          <p>Awake all night, go to the beach for the sun rise, only to see the cloudy sky.</p>
         </div>
       </div>
       <div class="carousel-item">
